--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "articles-managment",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://zolfekaraskarieh.github.io/articles-managment",
@@ -10,6 +10,7 @@
     "gh-pages": "^2.1.1",
     "md5": "^2.2.1",
     "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-draft-wysiwyg": "^1.13.2",
     "react-loadable": "^5.5.0",
     "react-notifications": "^1.4.3",
@@ -42,5 +43,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-react": "^6.5.0",
+    "webpack": "^1.12.13"
   }
 }
